--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,3 +15,6 @@ spring:
 logging:
    level:
      com.wang.springbootstudey: debug
+mybatis:
+  configuration:
+    mapUnderscoreToCamelCase: true
